Fix undefined methods when there are no records in table

--- a/app/views/time_sheets/index.html.haml
+++ b/app/views/time_sheets/index.html.haml
@@ -20,11 +20,11 @@
         - @entries.each do |entry|
           %tr.bg-white.border-b.dark:bg-gray-800.dark:border-gray-700
             %th.px-6.py-4
-              = entry.date.strftime("%d/%m/%Y")
+              = entry.date&.strftime("%d/%m/%Y")
             %td.px-6.py-4
-              = entry.start_time.strftime("%H:%M")
+              = entry.start_time&.strftime("%H:%M")
             %td.px-6.py-4
-              = entry.finish_time.strftime("%H:%M")
+              = entry.finish_time&.strftime("%H:%M")
             %td.px-6.py-4
               = "$ #{entry.value}"
             %td.px-6.py-4.text-right
